# neems-core

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  Rocket.toml.example  branch.txt  clippy.toml  demo-data.sql  diesel.toml  env.example  plan.txt  rocket.toml  rust-toolchain.toml  rustfmt.toml  static
modbus-poc/: Cargo.toml  example-config.toml
modbus-poc/docs/: architecture.md  configuration.md  modbus-overview.md
modbus-poc/src/: client.rs  config.rs  main.rs  server.rs
neems-admin/: Cargo.toml  README.md
neems-admin/src/: main.rs
neems-admin/src/admin_cli/: company_commands.rs  device_commands.rs  role_commands.rs  scheduler_commands.rs  site_commands.rs  user_commands.rs  utils.rs
neems-api/: Cargo.toml  Dockerfile  build.rs  diesel.toml  docker-entrypoint.sh
neems-api/migrations/2025-07-08-115638_initial_schema/: up.sql
neems-api/migrations/2025-07-29-142026_make_totp_secret_optional/: up.sql
neems-api/migrations/2025-07-29-164555_rename_user_role_to_staff/: up.sql
neems-api/migrations/2025-08-11-181650_create_entity_activity/: down.sql  up.sql
neems-api/migrations/2025-08-11-184219_add_users_triggers/: down.sql  up.sql
neems-api/migrations/2025-08-11-185129_fix_entity_activity_unique_constraint/: down.sql  up.sql
neems-api/migrations/2025-08-11-185324_add_remaining_triggers/: down.sql  up.sql
neems-api/migrations/2025-08-11-190505_remove_company_timestamps/: down.sql  up.sql
neems-api/migrations/2025-08-11-194015_remove_user_timestamps/: down.sql  up.sql
neems-api/migrations/2025-08-11-195700_remove_site_timestamps_for_activity_log/: down.sql  up.sql
neems-api/migrations/2025-08-14-104120_fix_sites_coordinate_types/: down.sql  up.sql
neems-api/migrations/2025-08-14-173617_add_deleted_tables_and_fix_constraints/: down.sql  up.sql
neems-api/migrations/2025-08-14-174223_add_cascade_to_remaining_constraints/: down.sql  up.sql
neems-api/migrations/2025-08-14-174357_add_cascade_to_users_company_id/: down.sql  up.sql
neems-api/migrations/2025-08-14-182758_remove_entity_activity_foreign_key/: down.sql  up.sql
neems-api/migrations/2025-08-15-163927_add_devices_table/: down.sql  up.sql
neems-api/migrations/2025-08-15-230744_add_scheduler_tables/: down.sql  up.sql
neems-api/migrations/2025-10-13-203257_add_commands/: down.sql  up.sql
neems-api/migrations/2025-10-13-203257_add_schedule_commands/: up.sql
neems-api/migrations/2025-10-13-203258_add_command_sets/: down.sql  up.sql
neems-api/migrations/2025-10-13-203259_add_schedule_templates/: down.sql  up.sql
neems-api/migrations/2025-10-13-203300_add_schedules_and_entries/: down.sql  up.sql
neems-api/migrations/2025-12-07-151910_remove_schedule_entities/: down.sql  up.sql
neems-api/migrations/2025-12-14-120000_add_schedule_library_system/: down.sql  up.sql
neems-api/migrations/2026-03-15-120000_add_duration_and_target_soc/: down.sql  up.sql
neems-api/migrations/2026-03-15-220000_add_ramp_duration_seconds/: down.sql  up.sql
neems-api/migrations/2026-05-12-002714_extend_site_for_demo/: down.sql  up.sql
neems-api/migrations/2026-05-19-120000_add_charge_discharge_rates/: down.sql  up.sql
neems-api/migrations/2026-05-22-170000_add_change_reason_to_entity_activity/: down.sql  up.sql
neems-api/migrations/2026-06-05-100000_add_trickle_charge_limit/: down.sql  up.sql
neems-api/migrations/2026-06-19-150000_add_alarm_acknowledgements/: down.sql  up.sql
neems-api/src/: admin_init_fairing.rs  company.rs  generate_types.rs  lib.rs  logged_json.rs  main.rs  odata_query.rs  scheduler_executor.rs  schema.patch  schema.rs  session_guards.rs
neems-api/src/api/: alarm.rs  application_rule.rs  command.rs  company.rs  data.rs  demo.rs  device.rs  entity_activity.rs  fixphrase.rs  login.rs  logout.rs  mod.rs  odata.rs  role.rs  schedule_command.rs  schedule_library.rs  scheduler.rs  secure_test.rs  site.rs  status.rs  user.rs
neems-api/src/models/: alarm_acknowledgement.rs  application_rule.rs  command.rs  command_set.rs  company.rs  deleted_company.rs  deleted_user.rs  device.rs  entity_activity.rs  mod.rs  role.rs  schedule.rs  schedule_command.rs  schedule_entry.rs  schedule_library.rs  schedule_template.rs  schedule_template_entry.rs  scheduler_execution.rs  scheduler_override.rs  scheduler_script.rs  session.rs  site.rs  user.rs  user_role.rs
neems-api/src/orm/: alarm_acknowledgement.rs  application_rule.rs  command.rs  command_set.rs  company.rs  db.rs  device.rs  entity_activity.rs  holidays.rs  login.rs  logout.rs  mod.rs  role.rs  schedule.rs  schedule_command.rs  schedule_entry.rs  schedule_library.rs  schedule_template.rs  schedule_template_entry.rs  (+8 more)
neems-api/tests/: alarms_forced_api.rs  application_rule_api.rs  auth.rs  command_api.rs  company.rs  company_sites.rs  company_users.rs  data_api.rs  device_api.rs  entity_activity_api.rs  fixphrase_api.rs  login.rs  logout.rs  odata_expand.rs  odata_navigation.rs  role.rs  role_comprehensive.rs  role_crud.rs  schedule_command_api.rs  schedule_library_api.rs  scheduler_api.rs  schema.rs  secure_test.rs  site_api.rs  user.rs  user_comprehensive.rs  user_crud_rbac.rs  user_roles.rs  user_roles_fast.rs
neems-core/: Cargo.toml  build.rs
neems-core/src/: admin_init_fairing.rs  api.rs  company.rs  db.rs  generate_types.rs  institution.rs  lib.rs  logged_json.rs  main.rs  role.rs  schema.rs  session_guards.rs  user.rs
neems-core/tests/: company.rs  company_sites.rs  company_users.rs  fixphrase_api.rs  institution.rs  login.rs  logout.rs  role.rs  role_crud.rs  schema.rs  secure_test.rs  site_api.rs  test_institution.rs  user.rs  user_crud_rbac.rs  user_roles.rs
neems-data/: Cargo.toml  Dockerfile  README.md
neems-data/docs/: architecture.md  data_collection.md
neems-data/src/: collectors.rs  lib.rs  lib_new.rs  main.rs  schema.rs  seed.rs
neems-data/tests/: cli_integration.rs  collectors.rs  data_aggregator.rs  signal_handling.rs
neems-rtac-sim/: Cargo.toml  Dockerfile
neems-rtac-sim/src/: config.rs  control.rs  lib.rs  main.rs  server.rs  state.rs
neems-rtac-sim/tests/: client_integration.rs
(+136 files in other folders)
