[workspace]
members = [
    "neems-core",      # Your main package (renamed from src/)
    "crates/fixphrase"  # Your new fixphrase crate
]
resolver = "2"  # Recommended for Rust 2021+ editions

[workspace.metadata.cargo-test]
default-features = false

[workspace.dependencies]
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
diesel = { version = "2.2.11", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"  # For loading .env files
rand = "0.9"
rand_core = "0.6"
reqwest = { version = "0.12", features = ["json", "cookies"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
time-test = "0.3.0"
tokio = { version = "1.46.1", features = ["full", "macros", "rt-multi-thread"] }
ts-rs  = { version = "10.1" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
