[workspace]
members = [
    "neems-api",
    "neems-admin",
    "neems-data",
    "crates/fixphrase"
]
resolver = "2"  # Recommended for Rust 2021+ editions

[workspace.metadata.cargo-test]
default-features = false

[workspace.dependencies]
argon2 = "0.5"
built = { version = "0.7", features = ["chrono", "git2"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
ctor = "0.2"
diesel = { version = "2.2.11", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"  # For loading .env files
mlua = { version = "0.9", features = ["lua54", "vendored"] }
rand = "0.9"
rand_core = "0.6"
regex = "1.10.3"
reqwest = { version = "0.12", features = ["json", "cookies"] }
rpassword = "7.3"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
time-test = "0.3.0"
signal-hook = "0.3.1"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.46.1", features = ["full", "macros", "rt-multi-thread"] }
ts-rs  = { version = "10.1", features = ["chrono-impl"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
