[package]
name = "neems-admin"
version = "1.1.0"
edition = "2024"

[features]
default = []
test-staging = [] # This is an empty feature, but it helps not to have to think about it when passing feature flags.

[dependencies]
neems-api = { path = "../neems-api" }
clap = { workspace = true, features = ["derive"] }
regex = { workspace = true }
rpassword = { workspace = true }
diesel = { workspace = true }
argon2 = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
