[package]
name = "neems-admin"
version = "1.1.1"
edition = "2024"

[features]
default = []
test-staging = ["neems-api/test-staging"] # Pass through test-staging feature to neems-api

[build-dependencies]
built = { workspace = true }

[dependencies]
neems-api = { path = "../neems-api" }
clap = { workspace = true, features = ["derive"] }
regex = { workspace = true }
rpassword = { workspace = true }
diesel = { workspace = true }
argon2 = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
