[package]
name = "neems-core"
version = "0.1.0"
edition = "2024"

[dependencies]
fixphrase = { path = "../crates/fixphrase" }  

chrono = { workspace = true }
diesel.workspace = true
diesel_migrations.workspace = true
dotenvy.workspace = true
figment_file_provider_adapter = { workspace = true }
rocket.workspace = true
rocket_sync_db_pools = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono = { workspace = true }
rocket = { workspace = true }
serde_json = { workspace = true }
tokio = {workspace = true}
