[package]
name = "neems-core"
version = "0.1.2"
edition = "2024"

[dependencies]
fixphrase = { path = "../crates/fixphrase", optional = true }  

argon2 = { workspace = true }
chrono = { workspace = true }
diesel.workspace = true
diesel_migrations.workspace = true
dotenvy.workspace = true
rand = { workspace = true }
rocket.workspace = true
rocket_sync_db_pools = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
default = []
fixphrase = ["dep:fixphrase"]
test-staging = []

[dev-dependencies]
argon2 = { workspace = true }
chrono = { workspace = true }
rand_core = { workspace = true }
reqwest = {workspace=true}
rocket = { workspace = true }
serde_json = { workspace = true }
time-test = {workspace = true}
tokio = {workspace = true}
