[package]
name = "neems-data"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "neems-data"
path = "src/main.rs"

[[bin]]
name = "setup-sources"
path = "src/bin/setup_sources.rs"

[[bin]]
name = "test-read"
path = "src/bin/test_read.rs"

[lib]
name = "neems_data"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
sha1 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true }