[package]
name = "neems-data"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "neems-data"
path = "src/main.rs"


[lib]
name = "neems_data"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
sha1 = "0.10"
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
nix = { version = "0.29.0", features = ["signal"] }
